kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titan-frontend-svc
  namespace: titan-exchange
  labels:
    app: titan-frontend
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: titan-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
